--- a/style/style.css
+++ b/style/style.css
@@ -6,29 +6,67 @@
 
     --Name-stats-Font-size: 18px;
 }
+html,
 body{
     margin: 0;
     box-sizing: border-box;
     font-family: 'Kumbh Sans', sans-serif;
     font-family: 'Quicksand', sans-serif;
 }
+body{
+    background: var(--Dark-cyan);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-image: url("../asets/bg-pattern-bottom.svg"),url("../asets/bg-pattern-top.svg");
+    background-position: left;
+}   
 .profile-card{
     border-radius: 8px;
     width: 85%;
     margin: 0 auto;
+    background-color: white;
+    overflow: hidden;
 }
 .profile-card-top{
     background-image: url("../asets/bg-pattern-card.svg");
-    
+    position: relative;
+    height: 120px;
+    display: flex;
+    justify-content: center;
 }
 .profile-card-top img{
     border-radius: 50%;
     border: 5px solid white;
+    position: absolute;
+    bottom: -53px;
+}
+.profile-card-bottom__datos-perfil >div{
+    height: 120px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+.profile-card-bottom__datos-perfil > div span:nth-child(1){
+    font-size: var(--Name-stats-Font-size);
+    font-weight: 700;
+    margin-right: 8px;
+}
+.profile-card-bottom__datos-perfil > div span:nth-child(2){
+    font-size: var(--Name-stats-Font-size);
+    font-weight: 400;
+    color: var(--Dark-gray);
+}
+.profile-card-bottom__datos-perfil p{
+    text-align: center;
+    color: var(--Dark-gray);
+    font-size: 14px;
 }
 .profile-card-bottom__datos-seguidores{
     display: flex;
     justify-content: space-around;
-    border-top: 1px solid var(--Dark-grayish-blue);
+    border-top: 1px solid var(--Dark-gray);
 }
 .profile-card-bottom__datos-seguidores div p:nth-child(1){
     font-size: var(--Name-stats-Font-size);
